[package]
name = "ff"
version = "0.11.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/zkcrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"
edition = "2018"

[dependencies]
bitvec = { version = "0.22", default-features = false, optional = true }
byteorder = { version = "1", default-features = false, optional = true }
ff_derive = { version = "0.11", path = "ff_derive", optional = true }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.2.1", default-features = false, features = ["i128"] }

[features]
default = ["bits", "std"]
alloc = []
bits = ["bitvec"]
derive = ["byteorder", "ff_derive"]
std = ["alloc"]

[[test]]
name = "derive"
required-features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
