[package]
name = "ff"
version = "0.13.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/zkcrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"
edition = "2021"

[dependencies]
bitvec = { version = "1", default-features = false, optional = true }
byteorder = { version = "1", default-features = false, optional = true }
ff_derive = { version = "0.13", path = "ff_derive", optional = true }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.2.1", default-features = false, features = ["i128"] }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
blake2b_simd = "1"
rand = "0.8"

[features]
default = ["bits", "std"]
alloc = []
bits = ["bitvec"]
zero = ["zeroize"]
derive = ["byteorder", "ff_derive"]
std = ["alloc"]
# with MSRV 1.60 this could be merged into bits with ff_derive?/bits
# see PR#72 for more information.
derive_bits = ["bits", "derive", "ff_derive/bits"]
derive_zero = ["zero", "derive", "ff_derive/zeroize"]

[[test]]
name = "derive"
required-features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
