[package]
name = "ff_codegen"
version = "0.12.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Code generator library used to build custom prime field implementations"
documentation = "https://docs.rs/ff-common/"
homepage = "https://github.com/zkcrypto/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/zkcrypto/ff"
edition = "2021"

[features]
# enabled when generating bitvec code utilizing the version of ff's bitvec
bits = []

[dependencies]
addchain = "0.2"
num-bigint = "0.3"
num-traits = "0.2"
num-integer = "0.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
cfg-if = "1"

[badges]
maintenance = { status = "passively-maintained" }
